style/index.css
@font-face {
  font-family: 'Bison';
  src: url('../fonts/Bison-Bold.ttf') format('truetype');
}
@font-face {
  font-family: 'Bozon';
  src: url('../fonts/ROHH - Bozon Regular.otf') format('opentype');
  font-weight: 400;
}
@font-face {
  font-family: 'Bozon';
  src: url('../fonts/ROHH - Bozon Bold.otf') format('opentype');
  font-weight: 500;
}
@font-face {
  font-family: 'Bozon';
  src: url('../fonts/ROHH - Bozon Light.otf') format('opentype');
  font-weight: 300;
}

html {
  overflow-x: hidden;
  text-overflow: ellipsis;
}

.home a{
    color: black;
}

.home .footerLink{
    color: white;
}

body {
  font-family: Bozon;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  overflow-x: hidden
}

.row, .col {
    margin: 0;
    padding: 0;
}

.home .navbar-brand {
  font-family: Bison;
  font-size: 40px;
}

.home .navbar-brand img {
  height: 35px;
  margin-right: 8px;
}

.home .navbar-nav {
    margin-left: auto;
}

.home #canvas {
    position: relative;
    width: 100vw;
    height: 50vh;
}

.home #overlay {
    position: absolute;
    margin-top: 30vh;
    margin-left: 50px;
    width: 30vw; 
    height: 100%;
    top: 0; 
    z-index: 1000;
}

.home .heroDL:hover{
    color: rgb(39, 39, 39);
}

.home #heroPusher{
    margin-bottom: 180px;
}

.home .whatIsExokit{
    position: relative;
    margin-top: -80px;
    min-height: 130vh;
    -webkit-clip-path: polygon(0 0, 100% 10%, 100% 90%, 0 100%);
    clip-path: polygon(0 0, 100% 10%, 100% 90%, 0 100%);
}

.home .whatIsExokitPusher{
    margin-top: 160px;
}

.home .whatIsExokitImg{
    height: auto;
    width: 50%;
    position: absolute;
    bottom: -20;
    left: 0;
    color: black;

}

.home .mlImg, .home .oculusImg, .home .viveImg{
    height: 100px;
    margin-bottom: 100px;
    width: auto;
    filter: invert(88%);
}
.home .exokitImg{
    height: 60px;
    width: auto;
}
.home .exokitName{
    font-family: Bison;
    font-size: 60px;
}

.home .featureArrow {
    border-right: thin solid black;
    height: 80px;
    width: 50%;
    margin-top: 70px;
    margin-bottom: 70px;
}

.home .featurePusher{
    padding-top: 50px;
}
.home .featureText{
    width: 75%;
    margin-left: 10vw;
}
.home .featureTextPusher{
    height: 50px;
}

.home .slideTextLeft{
    animation: moveLeft 0.5s ease-in;
}
.home .slideTextRight{
    animation: moveRight 0.5s ease-in;
}

@keyframes moveLeft {
    from { margin-left: 500px; }
    to { margin-left: 0px; }
}

@keyframes moveRight {
    from { margin-right: 500px; }
    to { margin-right: 0px; }
}

.home .exokitFeatures{
    position: relative;
    min-height: 90vh;
    color: white;
    background: #221962;  /* fallback for old browsers */
    background: -webkit-linear-gradient(120deg, #255B7F, #221962);  /* Chrome 10-25, Safari 5.1-6 */
    background: linear-gradient(120deg, #255B7F, #221962); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
    -webkit-clip-path: polygon(0 0, 100% 10%, 100% 100%, 0 100%);
    clip-path: polygon(0 0, 100% 10%, 100% 100%, 0 100%);
}

.home .exokitFeatures .row{
    width: 100%;
}

.home .exokitFeature{
    border-radius: 25px;
    text-align: center;
    height: 50vh;
    background: rgba(238, 238, 238, 0);  /* fallback for old browsers */
    background: -webkit-linear-gradient(120deg, #EEEEEE, #EEEEEE);  /* Chrome 10-25, Safari 5.1-6 */
    background: linear-gradient(120deg, rgba(238, 238, 238, 0.70), rgba(238, 238, 238, 0)); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
}

.home .madeWithExokit{
    position: relative;
    min-height: 70vh
}

.home .madeWithExokitPusher{
    margin-top: 50px;
}

.home #madeWithExokitMainImg{
    max-height: 60vh;
    width: auto;
    border-radius: 30px;
}

.home .madeWithExokitSubImg{
    max-height: 20vh;
    width: auto;
    cursor: pointer;
}

.home .quotes{
    color: white;
    position: relative;
    min-height: 90vh;
    background: #FF416C;  /* fallback for old browsers */
    background: -webkit-linear-gradient(to left, #FF4B2B, #FF416C);  /* Chrome 10-25, Safari 5.1-6 */
    background: linear-gradient(to left, #FF4B2B, #FF416C); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
    -webkit-clip-path: polygon(0 0, 100% 10%, 100% 100%, 0 100%);
    clip-path: polygon(0 0, 100% 10%, 100% 100%, 0 100%);
}

.home .quotesPusher{
    margin-top: 200px;
}

.home .quotesPic{
    height: 80px;
    width: auto;
    border-radius: 100px;
}
.home .quoteArrow{
    cursor: pointer;
}
.home .quoteArrow:hover{
    color: rgb(207, 207, 207);
}
.home .card-body{
    color: black;
}

.home .slideCardsLeft{
    animation: slideCardsLeft 0.5s ease-in;
}

@keyframes slideCardsLeft {
    from { margin-left: 0px; }
    to { margin-left: 1000px; }
}

.home .shadow {
    -moz-box-shadow:    100px 100px 100px 100px #ccc;
    -webkit-box-shadow: 100px 100px 100px 100px #ccc;
    box-shadow:         100px 100px 100px 100px #ccc;
  }

.home .getStarted{
    position: relative;
    height: 60vh;
    min-height: 600px;
    background-image: url('../media/getStarted.png');
    background-size: contain;
}

.home .verticalLine {
    border-left: thin solid rgba(0, 0, 0, 0.685);
    height: 80px;
  }

.home .footer{
    padding-top: 5vh;
    color: white;
    min-height: 30vh;
    background: #232526;  /* fallback for old browsers */
    background: -webkit-linear-gradient(to bottom, #414345, #17191a);  /* Chrome 10-25, Safari 5.1-6 */
    background: linear-gradient(to bottom, #414345, #17191a); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
}

.home .footer .fab:hover{
    color: rgb(207, 207, 207);
}
.home .footer a:hover{
    color: rgb(207, 207, 207);
}
.home .footer a{
    text-decoration: none;
    color: white;
}


.home .emailInput{
    border-radius: 100px;
}

.home .emailButton{
    border-radius: 100px;
    background-color: #2096A2;
    border: none;
}


@media only screen and (max-width: 800px) {
    .home #overlay {
        width: 80vw;
        margin-top: 15vh;
    }
    .home #heroPusher{
        margin-bottom: 40px;
    }
    .home #canvas{
        margin-top: 18vh;
    }
}

@media only screen and (max-height: 700px) {
    .home #heroPusher{
        margin-bottom: 20px;
    }
}
@media only screen and (max-width: 994px) {
    .home .whatIsExokitImg{
        width: auto;
        height: 300px;
    }
    .home .whatIsExokit{
        -webkit-clip-path: polygon(0 0, 100% 5%, 100% 98%, 0 100%);
        clip-path: polygon(0 0, 100% 5%, 100% 98%, 0 100%);
    }
    .home .quotes{
        -webkit-clip-path: polygon(0 0, 100% 5%, 100% 100%, 0 100%);
        clip-path: polygon(0 0, 100% 5%, 100% 100%, 0 100%);
    }
    .home .whatIsExokitPusher{
        margin-top: 200px;
    }
    .home .featureTextPusher{
        height: 20px;
    }
    .home .featurePusher{
        padding-top: 50px;
    }
    .home .mlImg, .home .viveImg, .home .oculusImg{
        margin-bottom: 80px;
    }
    .home .oculusImg{
        margin-bottom: 150px;
    }
    .home .featureArrow {
        margin-top: 30px;
        margin-bottom: 30px;
    }
    .home .exokitFeatures{
        -webkit-clip-path: polygon(0 0, 100% 5%, 100% 98%, 0 100%);
        clip-path: polygon(0 0, 100% 5%, 100% 98%, 0 100%);
        min-height: 230vh;
    }
    .home .exokitFeature{
        height: 45vh;
    }
    .home .featuresSpacer{
        height: 80px;
    }
}

